<resources>
    <string name="app_name">JobCompare6300</string>
    <string name="title">Title :</string>
    <string name="company">Company :</string>
    <string name="location">Location :</string>
    <string name="state">State :</string>
    <string name="city">City :</string>
    <string name="cost_of_living">Cost Of Living :</string>
    <string name="annual_salary">Annual Salary :</string>
    <string name="annual_bonus">Annual Bonus :</string>
    <string name="telework_days">Telework Days :</string>
    <string name="vacation_days">Vacation Days :</string>
    <string name="stocks">Shares :</string>
    <string name="current_job_details">Job Details</string>
    <string name="new_job_offer">New Job Offer</string>
    <string name="save">Save</string>
    <string name="main_menu">Main Menu</string>
    <string name="palo_alto">Palo Alto</string>
    <string name="sde">SDE</string>
    <string name="google">Google</string>
    <string name="_100">100</string>
    <string name="_200_000_00">200,000.00</string>
    <string name="_25_000_00">25,000.00</string>
    <string name="_5">5</string>
    <string name="_60">60</string>
    <string name="_1_000">1,000</string>
    <string name="new_job_offers">NEW JOB OFFERS</string>
    <string name="compare">COMPARE</string>
    <string name="settings">SETTINGS</string>
    <string name="current_job">CURRENT JOB</string>
    <string name="offer2Title">Title:</string>
    <string name="offer2Company">Company:</string>
    <string name="offer2Location">Location:</string>
    <string name="offer2CostOfLiving">Cost Of Living:</string>
    <string name="offer2Score">Score:</string>
    <string name="job_comparison_results">Job Comparison Results</string>
    <string name="other_offer">Other Offer</string>
    <string name="offer2AnnualSalary">Annual Salary :</string>
    <string name="offer2AnnualBonus">Annual Bonus :</string>
    <string name="offer2TeleworkDays">Telework Days :</string>
    <string name="offer2VacationDays">Vacation Days :</string>
    <string name="offer2shares">Shares :</string>
    <string name="highest_ranked_offer">Highest Ranked Offer</string>
    <string name="offer1Score">Score :</string>
    <string name="offer1Title">Title:</string>
    <string name="offer1Company">Company:</string>
    <string name="offer1Location">Location:</string>
    <string name="offer1CostOfLiving">Cost Of Living:</string>
    <string name="offer1AnnualSalary">Annual Salary :</string>
    <string name="offer1AnnualBonus">Annual Bonus :</string>
    <string name="offer1TeleworkDays">Telework Days :</string>
    <string name="offer1VacationDays">Vacation Days :</string>
    <string name="offer1Shares">Shares :</string>
    <string name="new_job_details">New Job Details</string>
</resources>