<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_job_details"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/currentJobTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/sde"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/currentJobCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/google"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/currentJobCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="Palo Alto"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/currentJobState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="CA"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/cost_of_living"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/currentJobCostOfLiving"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/_100"
            android:importantForAutofill="no"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/annual_salary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/currentJobSalary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/_200_000_00"
            android:importantForAutofill="no"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/annual_bonus"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/currentJobAnualBonus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/_25_000_00"
            android:importantForAutofill="no"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/telework_days"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/currentJobTeleworkDays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/_5"
            android:importantForAutofill="no"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/vacation_days"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/currentJobVacationdays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/_60"
            android:importantForAutofill="no"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/stocks"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/currentJobShares"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/_1_000"
            android:importantForAutofill="no"
            android:inputType="number" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="27dp" />

    <LinearLayout
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bSaveJob"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="saveJobDetails"
            android:text="@string/save" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bMainMenu"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="returnFromJobDetailsToMain"
            android:text="@string/main_menu" />

    </LinearLayout>

</LinearLayout>