<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bCurrentJob"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:onClick="handleClick"
        android:text="@string/current_job" />


    <Button
        android:id="@+id/bNewJobOffers"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/new_job_offers" />

    <Button
        android:id="@+id/bSettings"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <Button
        android:id="@+id/bCompareJobs"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/compare" />

</LinearLayout>